# pybaked

./: README.md  pyproject.toml
pybaked/: __init__.py  bakedreader.py  cli.py  errors.py  loader.py  protocol.py  pybaker.py
pybaked/cli/: __init__.py  bake.py  colors.py  read.py  unpack.py
tests/: conftest.py  test_building.py  test_loading.py
