[tool.poetry]
name = "pybaked"
version = "0.0.2"
authors = ["kuyugama <mail.kuyugama@gmail.com>"]
description = "Python package baking utility"
license = "GPL-3.0-only"

[tool.poetry.scripts]
baked-make = "pybaked.cli:bake"
baked-read = "pybaked.cli:read"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

